🚈🛬 Checkpoint ./views/header.ejs:1886802/334 ./public/js/AVBank.js:1886802/155

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -50,7 +50,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     tokenManager: {
       storage: 'sessionStorage'
     },
-};
+  };
+    
+  <% if(locals.tokens){ %>
+  var tokens = {
+    access_token: '<%= tokens.access_token %>',
+    id_token: '<%= tokens.id_token %>',
+  };
+  <% } %>
   </script>
 </head>
 
