🏵🍎 Checkpoint ./views/portfolio.ejs:2522170/429

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -24,6 +24,9 @@
     <section class="portfolio py-sm-5 py-3 pb-5">
         <div class="container py-md-5">
             <!-- title description -->
+             <div class="row py-lg-5">
+               <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR3QDBioSv3VwNwloAHBGTC8-y9xq2qezWp8pSmhPlIltI7veeESUYCq6yJvuzugKtJH5_6CQzE8D-J/embed?start=false&loop=false&delayms=60000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            </div>
             <div class="row py-lg-5">
                 <div class="col-lg-5  bb-left">
                     <span class="w3-line">works</span>
