🔖⏱ Checkpoint ./views/apiintro.ejs:2522170/21580 ./views/header.ejs:2522170/1045 ./routes/index.js:2522170/146

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -107,6 +107,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								</li>
 							</ul>
 						</li>
+            <li class="dropdown nav-item">
+							<a href="#" data-toggle="dropdown" class="nav-link">
+								Okta Resources
+								<span class="caret"></span>
+							</a>
+							<ul class="dropdown-menu multi-level" role="menu">
+								<li class="nav-item">
+									<a href="/apiintro" class="nav-link">Api Intro</a>
+								</li>
+							</ul>
+						</li>
 						<li class="nav-item mr-lg-3">
 							<a class="nav-link" href="services">Services</a>
 						</li>
