🔪💶 Checkpoint ./views/howtos.ejs:2522170/2054 ./routes/index.js:2522170/76 ./views/header.ejs:2522170/109

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -116,6 +116,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<li class="nav-item">
 									<a href="/apiintro" class="nav-link">Api Intro</a>
 								</li>
+                <li class="nav-item">
+									<a href="/howto" class="nav-link">How Tos</a>
+								</li>
 							</ul>
 						</li>
 						<li class="nav-item mr-lg-3">
