--- a/views/services.ejs
+++ b/views/services.ejs
@@ -19,6 +19,7 @@
             <li class="breadcrumb-item active" aria-current="page">Services</li>
         </ol>
     </nav>
+  <%- include partials/authJsMfaModal.ejs %>
     <!-- //breadcrumbs -->
     <!-- title description-->
     <div class="container py-sm-5 py-3">
