--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -35,6 +35,9 @@
   <!-- End User Prompt -->
   
   <button type="button" class="btn btn-danger btn-lg float-right av-button" onclick="openAccount()">Open Account</button>
+  <% if(locals.user){ %>
+       <button type="button" class="btn btn-danger btn-lg float-right av-button" onclick="openAccount()">Admin</button>
+  <% } %>
   <button type="button" class="btn btn-danger btn-lg float-right av-button" data-toggle="modal" data-target="#tokenModal">View Tokens</button>
 
   <div class="row py-lg-5">
