--- a/views/header.ejs
+++ b/views/header.ejs
@@ -69,7 +69,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<nav class="navbar navbar-expand-lg navbar-light py-4">
 				<!-- logo -->
 				<h1>
-					<a class="navbar-brand" href="index">AVBank</a>
+					<a class="navbar-brand" href="/accountPage">AVBank</a>
 				</h1>
 				<!-- //logo -->
 				<button class="navbar-toggler ml-md-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
