🐔🚘 Checkpoint ./views/header.ejs:2522170/158

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -119,6 +119,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <li class="nav-item">
 									<a href="/howto" class="nav-link">How Tos</a>
 								</li>
+                <li class="nav-item">
+									<a href="https://portalavb.glitch.me/apps" class="nav-link">Portal</a>
+								</li>
 							</ul>
 						</li>
 						<li class="nav-item mr-lg-3">
